--- a/index.html
+++ b/index.html
@@ -10,16 +10,17 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+        <script src="https://kit.fontawesome.com/5db21ba9c6.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/css/site.css">
 
   
 </head>
 
 <body class="d-flex flex-column h-100">
-
+    <!-- Nav Section-->
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">Fixed navbar</a>
+        <a class="navbar-brand" href="#">APP NAME</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
             aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -27,31 +28,56 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav me-auto mb-2 mb-md-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Link 1</a>
+                    <a class="nav-link" href="app.html">The App</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Link 2</a>
+                    <a class="nav-link" href="code.html">The Code</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Link 3</a>
+                    <a class="nav-link" target="_blank" href="#">Git Repo</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" target="_blank" href="#">About</a>
                 </li>
             </ul>
         </div>
     </div>
 </nav>
-
+    <!-- Main Section-->
     <main class="flex-shrink-0">
        <div class="container">
            <h1 class="mt-5">Template with dark fixed navbar and sticky footer</h1>
            <p class="lead">Pin a footer to the bottom of the viewport in desktop browsers with this custom HTML and CSS. A fixed navbar has been added with padding-top: 60px; on the main > .container.</p>
        </div>
     </main>
-    <footer class="footer mt-auto py-3 bg-dark sticky-footer">
-        <div class="container-fluid text-center">
-            <span class="text-muted">Place sticky footer content here.</span>
+    <!-- Footer Section-->
+    <footer class="footer mt-auto py-3">
+        <div class="container-fluid">
+            <div class="row row-cols-1 row-cols-lg-3 gy-2">
+                <div class="col order-last order-lg-first text-light">
+                    <div><span class="text-muted">&copy;2021</span> Jeff Sagen | kasrkin76@gmail.com </div>
+                </div>
+                <div class="col d-flex align-content-center justify-content-start justify-content-lg-center">
+                    <img src="/img/Kraken.htm" alt="Kraken logo" height="24">
+                </div>
+                <div class="col d-flex align-items-center justify-content-start justify-content-lg-end">
+                    <div class="row">
+                        <div class="col social"><a target="_blank" href="/jeffrey-sagen-71a5b737.htm"><i class="fab fa-linkedin"></i></a></div>
+                        <div class="col social"><a target="_blank" href="#"><i class="fab fa-instagram"></i></i></a></div>
+                        <div class="col social"><a target="_blank" href="#"><i class="fab fa-facebook"></i></a></div>
+                        <div class="col social"><a target="_blank" href="#"><i class="fab fa-github"></i></i></a></div>
+                        <div class="col social"><a target="_blank" href="#"><i class="fab fa-twitter"></i></a></div>
+
+
+<!--                        <i class="fab fa-linkedin"></i>
+                            <i class="fab fa-instagram"></i>
+                            <i class="fab fa-facebook"></i> -->
+                    </div>
+                </div>
+            </div>
         </div>
     </footer>
     <!-- Bootstrap JS -->
