--- a/app.html
+++ b/app.html
@@ -48,8 +48,45 @@
             </nav>
     <!-- Main Section-->
     <main class="flex-shrink-0">
-        <div class="container">
+        <div class="container mt-5">
+<div class="row row-cols-1 row-cols-lg-2">
+    <div class="col-lg-4 col border-end border-2">
+        <h1>HUNDO: A Coding Project</h1>
+        <h4 class="lead">
+            Live life one loop at a time.  Javascript coding exercise where the program displays the numbers from 0-100.  
+        </h4>
+        <h2 class="mt-5 border-bottom border-2">Instructions</h2>
+        <p>Enter a starting Value and a ending value. Press the button and the value will appear.</p>
+    </div>
+  
+    <div class="col-lg-8">
+        <div>
+            <h5>Enter Values</h5>
+            <form class="row gy-2 gx-3">
+                <div class="col">
+                    <input type="number" id="startValue" class="form-control" placeholder="Start Value" value="0" aria-label="Start Value">
+                </div>
+                <div class="col">
+                    <input type="number" id="endValue" class="form-control" placeholder="End Value" value="100" aria-label="End Value">
 
+                </div>
+                <div class="col-12 d-flex justify-content-end">
+                    <button type="button" id="btnSubmit" class="btn btn-dark btn-lg">Display HONDU</button>
+                </div>
+            </form>
+            <h2 class="mt-5 border-bottom border-2">Results</h2>
+            <div class="table-responsive">
+                <table class="table table-striped table-sm">
+                    <tbody id="results">
+                        <!--Results go here-->>
+
+                    </tbody>
+
+                </table>
+            </div>
+        </div>
+    </div>
+</div>
         </div>
     </main>
     <!-- Footer Section-->
