updated social links

--- a/index.html
+++ b/index.html
@@ -97,16 +97,14 @@
                 </div>
                 <div class="col d-flex align-items-center justify-content-start justify-content-lg-end">
                     <div class="row">
-                        <div class="col social"><a target="_blank" href="/jeffrey-sagen-71a5b737.htm"><i class="fab fa-linkedin"></i></a></div>
-                        <div class="col social"><a target="_blank" href="#"><i class="fab fa-instagram"></i></i></a></div>
-                        <div class="col social"><a target="_blank" href="#"><i class="fab fa-facebook"></i></a></div>
-                        <div class="col social"><a target="_blank" href="#"><i class="fab fa-github"></i></i></a></div>
-                        <div class="col social"><a target="_blank" href="#"><i class="fab fa-twitter"></i></a></div>
+                        <div class="col social"><a target="_blank" href="https://www.linkedin.com/in/jeffrey-sagen-71a5b737/"><i class="fab fa-linkedin"></i></a></div>
+                        <div class="col social"><a target="_blank" href="https://www.instagram.com/lordacin/"><i class="fab fa-instagram"></i></i></a></div>
+                        <div class="col social"><a target="_blank" href="https://www.facebook.com/jeffrey.sagen"><i class="fab fa-facebook"></i></a></div>
+                        <div class="col social"><a target="_blank" href="https://github.com/JeffSagen"><i class="fab fa-github"></i></i></a></div>
+                        <div class="col social"><a target="_blank" href="https://twitter.com/kasrkin76"><i class="fab fa-twitter"></i></a></div>
 
 
-<!--                        <i class="fab fa-linkedin"></i>
-                            <i class="fab fa-instagram"></i>
-                            <i class="fab fa-facebook"></i> -->
+
                     </div>
                 </div>
             </div>
